made it so u can just press enter when you start the game to select 1 deck as the default :)